--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
     <div id="intro-overlay">
         <div class="intro-text-container" id="firstname-container"></div>
-        <div class="intro-lastname" id="lastname">ZAID</div>
+        <div class="intro-lastname" id="lastname">alzergany</div>
     </div>
 
     <nav>
