--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abdulghani Zaid | Global Showroom</title>
+    <title>Abdulghani alzergany | Global Showroom</title>
     <style>
         :root {
             --gold: #D4AF37;
